# GIMasterProject

./: .gitignore  CMakeLists.txt  DONEXT.txt  README.md  RenderGraph.json  example.json
include/: Camera.h  FrameBufferObject.h  Graph.h  Mesh.h  Pass.h  SDLWindow.h  Scene.h  ShaderUtils.h  TextureUtils.h
shaders/: BlurFragment.glsl  DSFragment.glsl  DSVertex.glsl  DownResFragment.glsl  LightFragment.glsl  RenderPassFragment.glsl  RenderPassVertex.glsl  SSGIPassFragment.glsl  StochasticNormalsFragment.glsl  compute.glsl  fragment.glsl  vertex.glsl
src/: Camera.cpp  FrameBufferObject.cpp  Graph.cpp  Pass.cpp  Scene.cpp  ShaderUtils.cpp  TextureUtils.cpp  main.cpp
tests/: GITests.cpp
